# substrate-template-workshop

./: Cargo.toml  SubsListSpec.json  spec_raw.json
node/: Cargo.toml
node/src/: rpc.rs
pallets/asset-tx-payment/: Cargo.toml
pallets/asset-tx-payment/src/: lib.rs  payment.rs
pallets/cannabis/: Cargo.toml
pallets/cannabis/src/: lib.rs
pallets/dns/: Cargo.toml
pallets/dns/src/: lib.rs
pallets/ocw/: Cargo.toml
pallets/ocw/src/: lib.rs
pallets/orders/: Cargo.toml
pallets/orders/src/: lib.rs
pallets/peptides/: Cargo.toml
pallets/peptides/src/: lib.rs
pallets/social_media/: Cargo.toml
pallets/social_media/rpc/: Cargo.toml
pallets/social_media/rpc/src/: lib.rs
pallets/social_media/runtime-api/: Cargo.toml
pallets/social_media/runtime-api/src/: lib.rs
pallets/social_media/src/: lib.rs
pallets/users/: Cargo.toml
pallets/users/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
