[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
description = 'FRAME pallet template for defining custom runtime logic.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'pallet-peptides'
publish = false
readme = 'README.md'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '0.0.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", features = ["derive"], default-features = false }
scale-info = { version = "1.0.0", features = ["derive"], default-features = false }

frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, tag = 'monthly-2021-12', version = "4.0.0-dev" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, tag = 'monthly-2021-12', version = "4.0.0-dev" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, tag = 'monthly-2021-12', version = "4.0.0-dev" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, tag = 'monthly-2021-12', version = "4.0.0-dev" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false, tag = 'monthly-2021-12', version = "4.0.0-dev" }

[dev-dependencies]
serde = { version = "1.0.119" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, tag = 'monthly-2021-12', version = "4.0.0-dev" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, tag = 'monthly-2021-12', version = "4.0.0-dev" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, tag = 'monthly-2021-12', version = "4.0.0-dev" }

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
    'codec/std',
    'scale-info/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
    'pallet-timestamp/std',
    'sp-std/std',
]
try-runtime = ['frame-support/try-runtime']
