[package]
name = 'social-media-query'
version = '0.0.1'

[dependencies]
codec = { package = "parity-scale-codec", version = "2.3.1" }
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"
serde = { version = "1.0", features = ["derive"], optional = true }

# Substrate packages

sp-api = { tag = 'monthly-2021-11-1', git = 'https://github.com/paritytech/substrate.git', version = '4.0.0-dev', default-features = false }
sp-blockchain = { tag = 'monthly-2021-11-1', git = 'https://github.com/paritytech/substrate.git', version = '4.0.0-dev', default-features = false}
sp-rpc = { tag = 'monthly-2021-11-1', git = 'https://github.com/paritytech/substrate.git', version = '4.0.0-dev', default-features = false}
sp-runtime = { tag = 'monthly-2021-11-1', git = 'https://github.com/paritytech/substrate.git', version = '4.0.0-dev', default-features = false}
sp-std = { tag = 'monthly-2021-11-1', git = 'https://github.com/paritytech/substrate.git', version = "4.0.0-dev", default-features = false }

#local
social-media-query-runtime-api = { path = '../runtime-api', version = '0.0.1' }

[features]
default = ["std"]
std = [
  "serde",
  'sp-std/std',
  "sp-api/std",
  "sp-runtime/std",
  "social-media-query-runtime-api/std",
]